Updates project service and UI components for improved functionality.
- Enhances project service by updating HTTP request parameters and methods.
- Adds new routes for projects and sidebar UI improvements.
- Fixes minor UI issues and updates project details components.
- Improves file handling and form data management in project creation.

--- a/src/app/Layout/sidebar/sidebar.html
+++ b/src/app/Layout/sidebar/sidebar.html
@@ -2,7 +2,7 @@
   <!-- Toggle Button -->
   <div class="logo ">
     <div class="logoImages pos ">
-      <div class="  d-flex align-items-center "  routerLink="/" >
+      <div class="  d-flex align-items-center " routerLink="/">
         <img class="border-0" src="assets/img/logo.svg" alt="Logo">
 
 
@@ -49,6 +49,11 @@
       <a routerLink="/clients" class="d-flex gap-3 align-items-center" routerLinkActive="active">
         <i class="fa-solid fa-users me-2 fs-4"></i>
         <p class="m-0 mb-0">Clients</p>
+      </a>
+
+      <a routerLink="/projects" class="d-flex gap-3 align-items-center" routerLinkActive="active">
+        <i class="fa-solid fa-bars-progress me-2 fs-4"></i>
+        <p class="m-0 mb-0">Projects</p>
       </a>
 
       <a routerLink="/feedback" class="d-flex gap-3 align-items-center" routerLinkActive="active">
