--- a/src/app/Pages/projects/addproject/addproject.html
+++ b/src/app/Pages/projects/addproject/addproject.html
@@ -4,16 +4,29 @@
     <h1 class="mt-5 pt-5 text-white text-end big">ADD PROJECT</h1>
 
     <div class="addproject-box rounded-3 text-white p-5">
-      <div class="row first-project">
+      <div class="row first-project ">
         <div class="col-6 pe-5 ps-0">
           <div><img src="assets/img/half-logo.svg" alt="" /></div>
-          <input class="text-white w-100 mt-5 ps-0" type="text" placeholder="Project Name" />
+          <input #titleInput type="text" class="text-white w-100 mt-5 ps-0" placeholder="Project Title" />
         </div>
 
         <div class="col addproject-rightbox rounded-3"></div>
 
-        <input class="text-white w-100 mt-4 ps-0" type="text" placeholder="Project Description" />
+<input #descInput type="text" class="text-white w-100 mt-4 ps-0" placeholder="Project Description" />
+        <div class="CreateAccount-box  px-0 mt-0 py-0">
+                  <!-- Client Title -->
+        <p class="mt-4 mb-1 title">Client Title</p>
+        <div *ngFor="let title of options" class="d-flex mt-1 align-items-center">
+          <button
+            type="button"
+            class="rounded-1"
+            [class.clicked]="selectedClientTitle === title"
+            (click)="selectClientTitle(title)"
+          ></button>
+          <p class="low ms-2 m-0">{{ title }}</p>
+        </div>
 
+        </div>
         <p class="ps-0 mt-4 mb-2">Add Deadline</p>
 
         <div class="calender-sec w-100 p-3 rounded-3">
@@ -77,9 +90,8 @@
           >
             UPLOAD
           </button>
-          <input type="file" id="fileInput" hidden #fileInput (change)="onFileSelected($event)" />
+          <input type="file" id="fileInput"   hidden #fileInput (change)="onFileSelected($event)" />
 
-          <!-- عرض اسم الملف -->
         </div>
 
         <!-- Choose Client -->
@@ -142,7 +154,7 @@
       </div>
     </div>
 
-    <h2 class="mt-3 text-end pt-sm-4 logout" style="color: #00bec5">
+    <h2 class="mt-3 text-end pt-sm-4 logout" style="color: #00bec5" (click)="addProject()">
       ADD PROJECT
       <i class="ps-3 fa-solid fa-arrow-right fs-5" style="color: #00bec5"></i>
     </h2>
