--- a/src/app/Pages/projects/addproject/addproject.html
+++ b/src/app/Pages/projects/addproject/addproject.html
@@ -90,7 +90,7 @@
           >
             UPLOAD
           </button>
-          <input type="file" id="fileInput"   hidden #fileInput (change)="onFileSelected($event)" />
+          <input type="file" id="fileInput" multiple hidden #fileInput (change)="onFileSelected($event)" />
 
         </div>
 
