--- a/src/app/Pages/client/client.html
+++ b/src/app/Pages/client/client.html
@@ -92,7 +92,7 @@
                                 <p>{{ project.createdAt | date}}</p>
                                 <div class="mt-4 row">
                                     <div class="col">
-                                        <h6 style="color: #00bec5;">{{ project.services[0]?.name }}</h6>
+                                        <h6 style="color: #00bec5;">{{ project.services[0].name }}</h6>
                                     </div>
 
                                     <div class="col text-end">
