--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1925,7 +1925,7 @@ body {
     border-bottom: 1px solid var(--blue);
 }
 .days .fade {
-    color: #ffffffa3;
+    color: rgb(255 255 255 / 10%);
 }
 .calender span {
     font-size: 12px;
