--- a/src/app/Pages/Auth/login/login.html
+++ b/src/app/Pages/Auth/login/login.html
@@ -1,4 +1,4 @@
-<h1 class="mb-5 text-white text-end big">CLIENT PORTAL</h1>
+<h1 class="mb-5 text-white text-end big">LOGIN</h1>
 
 <div class="signup d-flex w-100 h-50    ">
     <div class="rightSide w-50">
