--- a/src/app/Pages/projects/projectDetalis/components/chat/chat.html
+++ b/src/app/Pages/projects/projectDetalis/components/chat/chat.html
@@ -1,4 +1,3 @@
-<!-- Start project chat -->
 <div class="project-detail-page">
     <div class="project-chat px-md-0 px-3">
         <h1 class="big text-end text-white mt-5 pt-5 mb-3">PROJECT CHAT</h1>
@@ -22,7 +21,7 @@
                     }
 
                     <!-- Message -->
-                    <div class="message p-0">
+                    <div class="message p-0"    [class.my-message]="message.userId === currentUserId">
                         <p class="username">{{ message.username }}</p>
 
                         <div class="message-content-wrapper">
@@ -37,7 +36,7 @@
                                     <div class="file-card d-flex align-items-center gap-2">
                                         <img class="attach-img" src="assets/img/new-document 2.svg" alt="">
                                         <div class="file-info text-lg-start">
-                                            <div class="file-name">{{ file.name }}</div>
+                                            <div class="file-name">{{ file.attachmentUrl | shorten : 10 }}</div>
                                             <div class="file-size">{{ file.type }}</div>
                                         </div>
                                     </div>
