--- a/src/app/Pages/projects/projectDetalis/components/chat/chat.scss
+++ b/src/app/Pages/projects/projectDetalis/components/chat/chat.scss
@@ -38,3 +38,13 @@
     }
   }
 }
+.my-message {
+  background-color: #00bec520;
+  text-align: end;
+}
+
+.dataShow {
+  width: 1000px;
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
