--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -1,5 +1,5 @@
 <div class="text-white team  ">
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-between align-items-center headerText">
         <h2 class=" pt-sm-4 logout" style="color: #00bec5; cursor: pointer;" routerLink="/addemployee">Add Employee <i
                 class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
         <h1 class=" big">THE TEAM</h1>
@@ -11,21 +11,23 @@
                 <div class="d-flex flex-column justify-content-between h-100">
                     <h1 class="mb-0">{{ today | date: 'd, MMM' | uppercase }}</h1>
                     <h4>Hello, Youssef</h4>
-                    <div class="flex-wrap pt-4 pb-2 rounded d-flex blue ps-md-0 ps-2 ">
-                                <div class="p-0 text-center col me-5 ms-1">
+                    <div
+                        class="project-stats d-flex flex-wrap justify-content-center align-items-center rounded blue p-3">
+                
+                         <div class="p-0 text-center stat-card m-2">
                             <p class="mb-0">Rising Talent</p>
-                            <p class="mb-0 fs-3">{{getProjectCounts().risingTalent | leadingZero}}</p>
+                            <p class="mb-0 fs-3">{{getProjectCounts().risingTalent| leadingZero}}</p>
                         </div>
-                        <div class="p-0 text-center col me-5">
+                              <div class="p-0 text-center stat-card m-2">
                             <p class="mb-0">Design Star </p>
-                            <p class="mb-0 fs-3">{{getProjectCounts().designStar | leadingZero}}</p>
+                            <p class="mb-0 fs-3">{{getProjectCounts().designStar| leadingZero}}</p>
                         </div>
-                        <div class="p-0 text-center col">
-                            <p class="mb-0">Top Tier</p>
-                            <p class="mb-0 fs-3">{{getProjectCounts().topTier | leadingZero}}</p>
+                              <div class="p-0 text-center stat-card m-2">
+                            <p class="mb-0">Top Tier </p>
+                            <p class="mb-0 fs-3">{{getProjectCounts().topTier| leadingZero}}</p>
                         </div>
-                              <div class="p-0 text-center col">
-                            <p class="mb-0">The Maestro</p>
+                              <div class="p-0 text-center stat-card m-2">
+                            <p class="mb-0">The Maestro </p>
                             <p class="mb-0 fs-3">{{getProjectCounts().maestro| leadingZero}}</p>
                         </div>
                     </div>
@@ -83,8 +85,8 @@
 
                 @else {
                 @for (card of cards(); track $index) {
-                <div class="col-lg-3 col-md-4 col-12 me-0 mt-3 cards">
-                    <a [routerLink]="['/profile', card.id]" class="text-decoration-none text-white">
+                <div class="me-0 mt-3 cards">
+                    <a [routerLink]="['/profile', card.id]" class="text-decoration-none text-white w-25">
                         <div class="card position-relative">
                             <div class="tag position-absolute">
                                 @switch (card.employeeBadge) {
@@ -102,7 +104,7 @@
                                 </div>
                             </div>
 
-                            <img [src]="baseimageUrl + card.imageUrl" class="card-img-top" alt=""  height="300px">
+                            <img [src]="baseimageUrl + card.imageUrl" class="card-img-top" alt="" height="300px">
                             <div class="pb-0 card-body">
                                 <h6 class="mb-1 fw-bold card-title">{{ card.name }}</h6>
                                 <p class="mb-1 card-text">{{ card.jobTitle }}</p>
