--- a/src/app/Pages/home/home.scss
+++ b/src/app/Pages/home/home.scss
@@ -17,7 +17,6 @@
     border-radius: 8px 0 0 8px;
     display: flex
 ;
-    /* align-items: center; */
     gap: 10px;
     padding: 10px;
     transition: all 0.4s 
@@ -41,5 +40,58 @@ ease;
   &:hover .cardOptions {
     right: 0px;
     opacity: 1;
+  }
+}
+
+.card-box{
+  display: grid !important;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
+}
+
+@media (max-width: 992px) { /* lg -> md */
+  .headerText{
+    justify-content: flex-start !important;
+    align-items: flex-start !important;
+    flex-direction: column-reverse;
+  }
+  .card-box{
+  grid-template-columns: repeat(auto-fit, minmax(80%, 1fr)) !important;
+
+  }
+  .team .right-box .text-end{
+    max-height: none;
+  }
+}
+
+.project-stats {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: white;
+  padding: 20px;
+  border-radius: 12px;
+}
+
+.stat-card {
+  flex: 1 1 10px;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.stat-card p {
+  margin: 0;
+}
+
+.fs-3 {
+  font-size: 1.5rem; 
+}
+
+@media (max-width: 576px) {
+  .stat-card {
+    flex: 1 1 40%;
+    margin: 5px 0;
   }
 }
