--- a/src/app/Layout/main-outlet/main-outlet.scss
+++ b/src/app/Layout/main-outlet/main-outlet.scss
@@ -21,6 +21,9 @@
 
   .main-content {
     margin-left: 0 !important;
+          padding: 0 0px !important;
+          padding-left: 10px !important;
+
   }
   .main-content.sidebar-closed{
       padding: 0 20px !important;
