--- a/src/app/Pages/projects/projects/projects.html
+++ b/src/app/Pages/projects/projects/projects.html
@@ -1,5 +1,5 @@
 <div class="text-white team">
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-between align-items-center headerText">
         <h2 class=" pt-sm-4 logout" style="color: #00bec5; cursor: pointer;" routerLink="/addproject">Add Project <i
                 class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
         <h1 class=" big">PROJECTS</h1>
