--- a/src/app/Pages/service/service.html
+++ b/src/app/Pages/service/service.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between align-items-center">
+<div class="d-flex justify-content-between align-items-center headerText">
   <h2
     class="pt-sm-4 logout"
     style="color: #00bec5; cursor: pointer;"
