--- a/src/app/Pages/service/service.scss
+++ b/src/app/Pages/service/service.scss
@@ -78,3 +78,12 @@ padding: 0;
     }
   }
 }
+
+@media (max-width:500px) {
+  .service-container{
+    justify-content: center;
+  }
+  .service-card {
+    width: 90%;
+  }
+}
