--- a/src/app/Layout/sidebar/sidebar.html
+++ b/src/app/Layout/sidebar/sidebar.html
@@ -61,10 +61,9 @@
         <i class="fa-solid fa-bars-progress me-2 fs-4"></i>
         <p class="m-0 mb-0">Projects</p>
       </a>
-
-      <a routerLink="/feedback" class="d-flex gap-3 align-items-center" routerLinkActive="active">
-        <i class="fa-solid fa-comments me-2 fs-4"></i>
-        <p class="m-0 mb-0">Feedback</p>
+   <a routerLink="/payment" class="d-flex gap-3 align-items-center" routerLinkActive="active">
+        <i class="fa-solid fa-bars-progress me-2 fs-4"></i>
+        <p class="m-0 mb-0">payment</p>
       </a>
 
       <a routerLink="/notifications" class="d-flex gap-3 align-items-center" routerLinkActive="active">
